--- a/css/style.css
+++ b/css/style.css
@@ -8,14 +8,14 @@ body{
     font-size: small;
     font-family: 'inter', sans-serif;
 }
-.loader-bgs{
+.loader-bg{
     background-color: white;
     position: fixed;
     z-index: 99999;
     width: 100%;
     height: 100%;
 }
-.loaders{
+.loader{
     border: 0 solid transparent;
     border-radius: 50%;
     width: 150px;
